--- a/LLM_server/tools/gpt2.ipynb
+++ b/LLM_server/tools/gpt2.ipynb
@@ -13,16 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\DELL\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'fitz'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfitz\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnltk\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnltk\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtokenize\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m word_tokenize\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'fitz'"
      ]
     }
    ],
@@ -261,24 +263,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting nltk\n",
+      "  Using cached nltk-3.8.1-py3-none-any.whl.metadata (2.8 kB)\n",
+      "Requirement already satisfied: click in /home/sharan/.local/lib/python3.11/site-packages (from nltk) (8.1.7)\n",
+      "Requirement already satisfied: joblib in /home/sharan/.local/lib/python3.11/site-packages (from nltk) (1.4.2)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /home/sharan/.local/lib/python3.11/site-packages (from nltk) (2024.5.15)\n",
+      "Requirement already satisfied: tqdm in /home/sharan/.local/lib/python3.11/site-packages (from nltk) (4.66.4)\n",
+      "Using cached nltk-3.8.1-py3-none-any.whl (1.5 MB)\n",
+      "Installing collected packages: nltk\n",
+      "Successfully installed nltk-3.8.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\DELL\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+      "[nltk_data] Downloading package punkt to /home/sharan/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token.As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query:  Who is the current director of ICAR-CRIDA, and who were the members of the editorial committee for the 2022 annual report?\n",
-      "answer:  The current Director of IRD-R, Dr. V. K. Singh, was appointed by Minister of State for Agriculture, Rural Development, Governmental Affairs, Ministry of Agriculture and Rural Affairs.\n"
+      "answer:  \n"
      ]
     }
    ],
@@ -289,7 +316,9 @@
     "from nltk.tokenize import sent_tokenize\n",
     "\n",
     "nltk.download('punkt')\n",
-    "\n",
+    "# tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
+    "# model = GPT2Model.from_pretrained(\"gpt2\")\n",
+    "  \n",
     "def generate_answer(query: str, context: str, model_name: str = 'gpt2', max_length: int = 1024) -> str:\n",
     "\n",
     "    # Load the tokenizer and model\n",
@@ -339,9 +368,9 @@
     "    # print(\"context: \", context)\n",
     "    return context\n",
     "\n",
-    "print(\"Query: \",query)\n",
-    "context = get_context(nearest_ids)\n",
-    "answer = generate_answer(query, context)\n",
+    "# print(\"Query: \",query)\n",
+    "# context = get_context(nearest_ids)\n",
+    "answer = generate_answer(\"who are you\", \"context\")\n",
     "print(\"answer: \", answer)"
    ]
   }
@@ -362,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
